--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
   <title>로그인 페이지</title>
@@ -238,3 +238,4 @@
   </script>
 </body>
 </html>
+
