Update and rename index1.html to index01.html

--- a/index01.html
+++ b/index01.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <title>로그인 페이지</title>
@@ -238,4 +238,5 @@
   </script>
 </body>
 </html>
+
 
